syntax = "proto3";
package denseid.keyderivation.v1;

option go_package = "github.com/dense-identity/denseid/api/go/keyderivation/v1;keyderivationpb";

message EvaluateRequest {
  bytes blinded_element = 1;
  bytes ticket = 2;
}

message EvaluateResponse {
  bytes evaluated_element = 1;
}

service KeyDerivationService {
  rpc Evaluate(EvaluateRequest) returns (EvaluateResponse);
}
