syntax = "proto3";
package denseid.protocol.v1;

option go_package = "github.com/dense-identity/denseid/api/go/protocol/v1;protocolpb";

// Message types for the protocol
enum MessageType {
  MESSAGE_TYPE_UNSPECIFIED = 0;
  AKE_REQUEST              = 1;
  AKE_RESPONSE             = 2;
  AKE_COMPLETE             = 3;
  RUA_REQUEST              = 4;
  RUA_RESPONSE             = 5;
  HEARTBEAT                = 6;
  BYE                      = 7;
}

// ProtocolMessage is the envelope for all protocol messages
message ProtocolMessage {
  MessageType type      = 1;
  string      sender_id = 2;
  string      topic     = 3;
  bytes       payload   = 4;  // Serialized AkeMessage or RuaMessage
}

// AkeMessage is used for Authenticated Key Exchange
message AkeMessage {
  bytes dh_pk      = 1;  // DH public key (only in AkeResponse and AkeComplete)
  bytes amf_pk     = 2;  // AMF public key for this party
  bytes expiration = 3;  // Credential expiration timestamp
  bytes proof      = 4;  // ZK proof of enrollment
  bytes pke_pk     = 5;  // PKE public key for encryption
}

// Rtu contains RTU information
message Rtu {
  bytes  amf_pk     = 1;  // AMF public key
  bytes  expiration = 2;  // RTU expiration
  bytes  signature  = 3;  // Enrollment signature from RA
  string name       = 4;  // Display name
  bytes  pke_pk     = 5;  // PKE public key for encryption
}

// RuaMessage is used for Rich User Authentication
message RuaMessage {
  bytes  dh_pk  = 1;  // DH public key for RUA phase
  string reason = 2;  // Call reason
  Rtu    rtu    = 3;  // RTU info
  string tpc = 4;
  bytes misc = 5; // misc data
  bytes sigma = 6;
}
